--- a/styles.css
+++ b/styles.css
@@ -549,8 +549,8 @@ header, body {
   
   .kraw2 {
     display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
+    flex-direction: column;
+    justify-content: flex-start;
     margin-top: 3%;
     margin-left: 0%;
     width: 100%;
@@ -582,10 +582,8 @@ header, body {
   }
 
   .kraw2 h1 {
-    display: flex; 
-    flex-direction: row;
     text-align: left;
-    margin-left: 0px;
+    margin-left: 6%;
     font-size: 35pt;
     font-family: "Poppins", serif;
     font-weight: bold 700;
@@ -593,7 +591,9 @@ header, body {
   }
 
  .kraw2 p {
-    margin: 20px;
+    margin-top: 0px;
+    margin-left: 5%;
+    margin-right: 5%;
     padding: 20px;
     font-size: 15pt;
     font-family: "Lato", serif;
@@ -610,7 +610,7 @@ header, body {
     padding: 20px;
     width: 200px;
     height: 100px;
-    top: 60%;
+    top: 60px;
     background-color: #59331D;
     border: none;
     color: white;
@@ -796,6 +796,7 @@ header, body {
 
 
   .prod2 h2 {
+    text-align: center;
     margin-top: 0px;
     margin-left: 0px;
     padding: 0px;
@@ -1214,7 +1215,8 @@ header, body {
       
   .kraw2 {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    justify-content: flex-start;
     margin-top: 3%;
     margin-left: 0%;
     width: 100%;
@@ -1228,14 +1230,23 @@ header, body {
    
     
   }
-    
+
   .kraw .menu2 {
-    display: flex;
+    display: none;
     flex-direction: row;
-    width: 30%;
+    
 
   }
-    
+
+  .kraw2 h1 {
+    text-align: left;
+    margin-left: 4%;
+    font-size: 35pt;
+    font-family: "Poppins", serif;
+    font-weight: bold 700;
+    color: #082B59;
+  }
+
   .kraw2 p {
     margin: 20px;
     padding: 20px;
@@ -1248,7 +1259,7 @@ header, body {
   .kraw2 .button {
     position: relative;
     padding: 20px;
-    top: 60%;
+    top: 60px;
     background-color: #59331D;
     border: none;
     color: white;
@@ -1885,13 +1896,12 @@ color: #D98555;
   
   
   .responsive-map iframe {
-    
-  margin-top: 0px;
-  margin-left: 0px;
-  padding-top: 0px;
-  border-style: none;
-  height: 300px;
-  width: 100%;
+    margin-top: 10%;
+    margin-left: 0%;
+    padding: 0px;
+    border-style: none;
+    height: 300px;
+    width: 100%;
   }
  
 
@@ -1968,7 +1978,8 @@ color: #D98555;
   
 .kraw2 {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  justify-content: flex-start;
   margin-top: 3%;
   margin-left: 0%;
   width: 100%;
@@ -1999,10 +2010,18 @@ color: #D98555;
    
   }
 
+  .kraw2 h1 {
+    text-align: left;
+    margin-left: 2%;
+    font-size: 35pt;
+    font-family: "Poppins", serif;
+    font-weight: bold 700;
+    color: #082B59;
+  }
   .kraw2 .button {
   position: relative;
   padding: 20px;
-  top: 60%;
+  top: 60px;
   background-color: #59331D;
   border: none;
   color: white;
@@ -2050,7 +2069,14 @@ color: #D98555;
   color: #082B59;
   text-align: center;
   }
-   
+  
+  .kraw #logo {
+  width: 30%;
+  margin-right: 50%;
+  margin-top: 40%;
+  position: absolute;
+  }
+
   #para {
   display: grid;
   justify-content: center;
@@ -2226,6 +2252,7 @@ color: #D98555;
 
   .menu {
   display: flex;
+  flex-direction: column;
   width: 100%;
   }
 
@@ -2292,25 +2319,32 @@ color: #D98555;
   
   .kraw2 {
   display: flex;
-  flex-direction: row;
-  margin-top: 3%;
+  flex-direction: column;
+  justify-content: flex-start;
+  margin-top: 0%;
   margin-left: 0%;
   width: 100%;
-  padding: 30px;
+  padding: 20px;
   color: #59331D;
   font-size: 15pt;
   font-family: "Lato", serif;
   font-weight: bold 700;
   }
 
+ 
  .menu2 {
   display: flex;
   flex-direction: row;
-  width: 0%;
+  width: 100%;
   }
 
+  .kraw2 h1 {
+    margin-top: 0px;
+    padding: 0px;
+    margin-left: 16px;
+  }
  .kraw2 p {
-  margin: 0px;
+  margin-top: -60px;
   padding: 20px;
   font-size: 15pt;
   font-family: "Lato", serif;
@@ -2320,8 +2354,8 @@ color: #D98555;
 
   .kraw2 .button {
   position: relative;
-  padding: 20px;
-  top: 60%;
+  padding: 30px;
+  top: 30px;
   background-color: #59331D;
   border: none;
   color: white;
@@ -2347,7 +2381,7 @@ color: #D98555;
   position: relative;
   width: 80%;
   margin-left: 10%;
-  margin-top: 20px;
+  margin-top: 0px;
   }
 
   .kraw3 h1 {
@@ -2381,18 +2415,26 @@ color: #D98555;
   position: absolute;
   margin-top: 0;
   top: 0;
-  left: 10%;
-  width: 80%;
+  left: 0%;
+  width: 100%;
   height: 100%;
   }        
 
-  .kraw2 #logo {
+  .kraw #logo {
   width: 30%;
   margin-right: 80%;
   margin-top: 40%;
   position: absolute;
   }
-
+  .responsive-map iframe {   
+    margin-top: 0px;
+    margin-left: 0px;
+    padding-top: 0px;
+    border-style: none;
+    height: 180px;
+    width: 100%;
+    
+    }
 
 }
  
@@ -2405,7 +2447,7 @@ color: #D98555;
   flex-direction: column;
   justify-content: center;
   padding: 20px; 
-  margin-left: 18%;
+  margin-left: 20%;
   }
 
   nav {
@@ -2416,6 +2458,7 @@ color: #D98555;
   margin: 0px;
   padding: 0px;
   height: 500px;
+  width: 100%;
   max-width: 100%;
   background-color: #131D26;
   overflow: auto;
@@ -2457,6 +2500,7 @@ color: #D98555;
   .leftContent {
   display: grid;
   grid-area: leftContent;
+  align-content: last baseline;
   }
 
   #raz {
@@ -2464,7 +2508,7 @@ color: #D98555;
   grid-area: leftContent;
   align-content: flex-start;
   text-align: left;
-  margin-left: 5%;
+  margin-left: 0%;
   }
 
   #raz h1 {
@@ -2493,7 +2537,7 @@ color: #D98555;
   margin-right: 5%;
   margin-top: 0%;
   padding: 0px;
-  font-size: 14pt;
+  font-size: 15pt;
   font-family: "Lato", serif;
   font-weight: 400;
   font-style: normal;
@@ -2590,29 +2634,30 @@ color: #D98555;
   display: flex;
   flex-direction: row;
   width: 100%;
-  margin-top: 0px;
   padding: 0px;
   vertical-align: middle;
-  margin-left: 0px;
+  margin-left: 0;
   }
 
   .prod2 {
   display: flex;
   flex-direction: row;
-  width: 100%;
+  width: 90%;
   height: 400px;
   padding: 0px;
-  margin: 2%;
-  background-color: #F2F2F2;
-  margin-left: 5%;
+  margin: 5%;
+  background-color: hidden;
+
+  
 
 
   }
   .prod2 h2 {
   margin-top: 0px;
+  text-align: center;
   margin-left: 0px;
   padding: 0px;
-  height: 150px;
+  height: 100px;
   font-size: 15pt;
   font-family: "Lato", serif;
   font-weight: 700;
@@ -2626,16 +2671,18 @@ color: #D98555;
 
 
   .prod2 p {
-  padding: 0px;
-  margin-top: -200px;
+  margin: 10px;
+  margin-top: -150px;
   font-size: 14pt;
   font-family: "Lato", serif;
   font-weight: 400;
   font-style: normal;
+  padding: 10px;
   width: 100%;
   color: #131D26;
   background-color:#F2F2F2;
   height: 100px;
+
   }
 
     
@@ -2715,7 +2762,7 @@ color: #D98555;
   padding: 0px;
   text-align: left;
   margin-left: 30px;
-  margin-top: 15%;
+  margin-top: 0%;
   font-size: 18pt;
   font-family: "Poppins", serif;
   font-weight: bold 700;
@@ -2743,7 +2790,7 @@ color: #D98555;
   display: flex;
   flex-direction: column;
   align-content: flex-end;
-  margin-top: 50%;
+  margin-top: 30%;
   margin-left: 0%;
   width: 100%;
   padding: 0px;
@@ -2759,7 +2806,7 @@ color: #D98555;
   display: flex;
   flex-direction: column;
   align-content: flex-start;
-  padding: 0px;
+  padding: 20px;
   font-size: 15pt;
   font-family: "Lato", serif;
   font-weight: bold 700;
@@ -2768,7 +2815,7 @@ color: #D98555;
  .kraw2 .button {
   position: relative;
   padding: 0px;
-  margin-top: -50px;
+  margin-top: 60px;
   width: 150px;
   height: 50px;
   background-color: #59331D;
@@ -2798,7 +2845,7 @@ color: #D98555;
   justify-content: flex-end;
   width: 100%;
   margin-left: 0%;
-  margin-top: 60%;
+  margin-top: 30%;
   }
 
   .kraw3 h1 {
